updates to placeholder page

--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,30 @@
-<DOCTYPE HTML>
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Fin is the personal banking platform." />
+	<meta name="keywords" content="fin, finance, money, banking, personal, wealth, txt fin, txtfin" />
+	<title>Fin</title>
+	<link rel="stylesheet" href="style.css">
+</head>
 
-<h1> This site is under construction </h1>
+<body>
+
+<div id="coming-soon">
+<h1>Fin</h1>
+
+<p>This is some really great text about Fin.</p>
+<p>This is another line of really great text about Fin</p>
+
+<form method="post">
+	<div id="subscribe">
+		<input type="text" placeholder="enter your email address...">
+		<input type="submit" value="Submit">
+		<div class="clear"></div>
+	</div>
+</form>
+
+</div>
+
+</body>
+</html>
