updated text on placeholder page

--- a/client/index.html
+++ b/client/index.html
@@ -13,12 +13,11 @@
 <div id="coming-soon">
 <h1>Fin</h1>
 
-<p>This is some really great text about Fin.</p>
-<p>This is another line of really great text about Fin</p>
+<p>We are building the world's first personal banking platform.</p>
 
 <form method="post">
 	<div id="subscribe">
-		<input type="text" placeholder="enter your email address...">
+		<input type="text" placeholder="enter you email to stay in touch ...">
 		<input type="submit" value="Submit">
 		<div class="clear"></div>
 	</div>
